@@ -15,7 +15,7 @@
     </div>
     <div class='body' dir='auto'>$status_body</div>
     <div class='retweet'>$retweet</div>
-    <div class='datetime'>$date_time $source</div>
+    <div class='datetime'><span class='command'>$command</span>$date_time $source</div>
     $target
   </div>
 </div>
